[project]
name = "telegram-chatbot-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "faster-whisper>=1.2.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.0",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.5",
]
